# reducers

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
benchmarks/: _benchutils.py  benchmark_1d.py  benchmark_axis.py  benchmark_parallel_grains.py  recorded_parallel_grains.json  tune_parallel.py
docs/quarto/: _quarto.yml  index.qmd  performance.qmd  rust-api.qmd  styles.css
docs/quarto/api/: _sidebar.yml  average.qmd  count_finite.qmd  index.qmd  lmedian.qmd  max.qmd  mean.qmd  median.qmd  min.qmd  minmax.qmd  nanaverage.qmd  nanmax.qmd  nanmean.qmd  nanmedian.qmd  nanmin.qmd  nanminmax.qmd  nanpercentile.qmd  nanquantile.qmd  nanstd.qmd  nansum.qmd  nanvar.qmd  percentile.qmd  quantile.qmd  std.qmd  sum.qmd  var.qmd
docs/quarto/performance/: array-1d-benchmarks.qmd  axis-benchmarks.qmd  max-performance.qmd  parallel-threads.qmd
python/reducers/: __init__.py  _array.py  _config.py  _doc.py  _validation.py  autotuner.py  lowlevel.py
src/: axis.rs  finite.rs  lib.rs  parallel.rs  reducers_1d.rs
src/pyapi/: mod.rs  reducers.rs
tests/: test_1d.py  test_axis.py  test_lowlevel.py  test_parallel_config.py
