[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "reducers"
version = "0.2.1"
description = "Rust-backed reductions for NumPy arrays (plain + NaN-aware)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Documentation = "https://ysbach.github.io/reducers/"
Repository = "https://github.com/ysbach/reducers"
Issues = "https://github.com/ysbach/reducers/issues"
Changelog = "https://github.com/ysbach/reducers/releases"

[project.scripts]
reducers-autotune = "reducers.autotuner:main"

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff", "maturin>=1.5,<2", "ipython"]
docs = [
    "jupyter",
    "matplotlib",
    "quartodoc",
    "griffe<1",
]
bench = ["bottleneck>=1.3"]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "reducers._core"
profile = "release"
features = ["extension-module"]
exclude = [
    "**/.DS_Store",
    "**/__pycache__/*",
    "**/*.pyc",
    "**/*.so",
    "build/**",
    "python/*.egg-info/**",
    "target/**",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".uv-cache",
    ".venv",
    "docs/quarto/.quarto",
    "docs/quarto/_site",
    "target",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY"]
